updated packages to .NET Core 2.0.0

--- a/NuGet.Config
+++ b/NuGet.Config
@@ -1,6 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
     <add key="aspnetcidev" value="https://dotnet.myget.org/F/aspnetcore-ci-dev/api/v3/index.json" />
   </packageSources>
+  <disabledPackageSources>
+    <add key="aspnetcidev" value="true" />
+  </disabledPackageSources>
 </configuration>
