--- a/01 Lightweight API (no MVC)/LightweightApi/LightweightApi.csproj
+++ b/01 Lightweight API (no MVC)/LightweightApi/LightweightApi.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.0</TargetFramework>
+    <TargetFramework>netcoreapp2.0</TargetFramework>
     <PreserveCompilationContext>true</PreserveCompilationContext>
     <AssemblyName>LightweightApi</AssemblyName>
     <OutputType>Exe</OutputType>
@@ -17,13 +17,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Server.IISIntegration" Version="1.2.0-preview1-23182" />
-    <PackageReference Include="Microsoft.AspNetCore.Routing" Version="1.2.0-preview1-23182" />
-    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="1.2.0-preview1-23182" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="1.2.0-preview1-23182" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="1.2.0-preview1-23182" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.2.0-preview1-23182" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="1.2.0-preview1-23182" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.IISIntegration" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Routing" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
