--- a/02 Lightweight API with authentication/LightweightApiWithAuth/LightweightApiWithAuth.csproj
+++ b/02 Lightweight API with authentication/LightweightApiWithAuth/LightweightApiWithAuth.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.0" />
     <PackageReference Include="IdentityServer4" Version="1.0.2" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="1.0.2" />
