--- a/05 MVC Core API with authentication/MvcCoreApiWithAuthentication/MvcCoreApiWithAuthentication.csproj
+++ b/05 MVC Core API with authentication/MvcCoreApiWithAuthentication/MvcCoreApiWithAuthentication.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.0.0" />
     <PackageReference Include="IdentityServer4" Version="2.0.0-rc1-update1" />
